--- a/index3.html
+++ b/index3.html
@@ -26,6 +26,7 @@
 					<p style="color:white; background-color: orange; margin-right: 682px">Logo também conclui o ensino superior na Faculdade Anhanguera Educacional:</p>
 						<img src="http://gigalista.com.br/uploads/noticias/62c1978d621968c33e29530b7ab173ad.png" width="650">
 						<figcaption>foto da <a href="#"><sub>internet</sub></a></figcaption>
+			<div style="background-color: #87ceeb; margin-right: 682px">
 				<h3>Nesse meio tempo o trabalho sempre me acompanhou:</h3>
 					<p>
 						<ul>
@@ -34,6 +35,8 @@
 							<li>Brigada Militar</li>
 						</ul>
 					</p>
+			</div>		
+			<div style="background-color: #c0c0c0; margin-right: 682px">
 				<H4>Hobs:</H4>
 					<ul>
 						<li>Jogar Futebol</li>
@@ -42,6 +45,7 @@
 						<li>Namorar</li>
 						<li>Ganhar do compadre no Fifa</li>
 					</ul>
+			</div>		
 			</article>	
 			<footer>
 				<h5>Para maiores informações, dúvidas e sujestões <br> Yahoo Mail: abnergoulart@yahoo.com.br
