Extra icone aba de janela

--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+	<link rel="shortcut icon" type="text/css" href="https://static7.depositphotos.com/1219281/708/i/450/depositphotos_7082441-stock-photo-beautiful-sunset-on-the-beach.jpg">
 	<title>Minha Vida</title>
 	<meta charset="utf-8">
 </head>
